# boternity

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-RESEARCH.md
.planning/phases/01-foundation-bot-identity/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-CONTEXT.md
.planning/phases/02-single-agent-chat-llm/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-07-PLAN.md  02-08-PLAN.md  02-08-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md
.planning/phases/03-multi-provider-memory/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-07-PLAN.md  03-07-SUMMARY.md  03-08-PLAN.md  03-08-SUMMARY.md  03-09-PLAN.md  03-09-SUMMARY.md  03-10-PLAN.md  03-10-SUMMARY.md  03-11-PLAN.md  03-11-SUMMARY.md  03-12-PLAN.md  03-12-SUMMARY.md  03-13-PLAN.md  03-13-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-web-ui-core-fleet-dashboard/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  (+16 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/web/: index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
crates/boternity-api/: Cargo.toml
crates/boternity-api/src/: main.rs  state.rs
crates/boternity-api/src/cli/: bot.rs  builder.rs  kv.rs  memory.rs  message.rs  mod.rs  provider.rs  secret.rs  session.rs  shared_memory.rs  skill.rs  skill_browser.rs  skill_create.rs  soul.rs  status.rs  storage.rs  workflow.rs
crates/boternity-api/src/cli/chat/: banner.rs  budget_display.rs  commands.rs  input.rs  loop_runner.rs  mod.rs  renderer.rs  tree_renderer.rs
crates/boternity-api/src/http/: error.rs  mod.rs  response.rs  router.rs
crates/boternity-api/src/http/extractors/: auth.rs  mod.rs  query.rs
crates/boternity-api/src/http/handlers/: bot.rs  builder.rs  builder_ws.rs  chat.rs  identity.rs  message.rs  mod.rs  secret.rs  session.rs  skill.rs  soul.rs  stats.rs  webhook.rs  workflow.rs  ws.rs
crates/boternity-core/: Cargo.toml
crates/boternity-core/src/: lib.rs
crates/boternity-core/src/agent/: budget.rs  context.rs  cycle_detector.rs  engine.rs  mod.rs  orchestrator.rs  prompt.rs  request_context.rs  spawner.rs  summarizer.rs  title.rs  workspace.rs
crates/boternity-core/src/builder/: agent.rs  assembler.rs  defaults.rs  draft_store.rs  memory.rs  mod.rs  prompt.rs  skill_builder.rs  state.rs
crates/boternity-core/src/chat/: mod.rs  repository.rs  service.rs  session.rs
crates/boternity-core/src/event/: bus.rs  mod.rs
crates/boternity-core/src/llm/: box_provider.rs  fallback.rs  health.rs  mod.rs  provider.rs  registry.rs  token_budget.rs  types.rs
crates/boternity-core/src/memory/: box_embedder.rs  box_vector.rs  embedder.rs  extractor.rs  mod.rs  shared.rs  store.rs  vector.rs
crates/boternity-core/src/message/: bus.rs  envelope.rs  handler.rs  mod.rs  router.rs
crates/boternity-core/src/repository/: bot.rs  message.rs  mod.rs  secret.rs  soul.rs  workflow.rs
crates/boternity-core/src/service/: bot.rs  fs.rs  hash.rs  mod.rs  secret.rs  soul.rs
crates/boternity-core/src/skill/: chaining.rs  executor.rs  inheritance.rs  manifest.rs  mod.rs  permission.rs  prompt_injector.rs  registry.rs  resolver.rs
crates/boternity-core/src/storage/: file_store.rs  kv_store.rs  mod.rs
crates/boternity-core/src/workflow/: checkpoint.rs  context.rs  dag.rs  definition.rs  executor.rs  expression.rs  mod.rs  retry.rs  scheduler.rs  step_runner.rs  trigger.rs
crates/boternity-infra/: Cargo.toml
crates/boternity-infra/src/: config.rs  lib.rs
crates/boternity-infra/src/builder/: llm_builder.rs  mod.rs  sqlite_draft_store.rs  sqlite_memory_store.rs
crates/boternity-infra/src/crypto/: hash.rs  mod.rs  vault.rs
crates/boternity-infra/src/filesystem/: identity.rs  mod.rs  soul.rs  user.rs
crates/boternity-infra/src/keychain/: mod.rs
crates/boternity-infra/src/llm/: mod.rs  pricing.rs
crates/boternity-infra/src/llm/anthropic/: client.rs  mod.rs  streaming.rs  types.rs
crates/boternity-infra/src/llm/bedrock/: client.rs  mod.rs  streaming.rs  types.rs
crates/boternity-infra/src/llm/claude_sub/: mod.rs
crates/boternity-infra/src/llm/openai_compat/: config.rs  mod.rs  streaming.rs
crates/boternity-infra/src/secret/: chain.rs  env.rs  mod.rs
crates/boternity-infra/src/skill/: audit.rs  local_executor.rs  mod.rs  registry_client.rs  sandbox.rs  sandbox_linux.rs  sandbox_macos.rs  skill_store.rs  wasm_compiler.rs  wasm_executor.rs  wasm_runtime.rs
crates/boternity-infra/src/sqlite/: audit.rs  bot.rs  chat.rs  file_metadata.rs  kv.rs  memory.rs  message.rs  mod.rs  pool.rs  provider_health.rs  secret.rs  skill_audit.rs  soul.rs  workflow.rs
crates/boternity-infra/src/storage/: chunker.rs  filesystem.rs  indexer.rs  mod.rs
crates/boternity-infra/src/vector/: embedder.rs  lance.rs  memory.rs  mod.rs  schema.rs  shared.rs
crates/boternity-infra/src/workflow/: execution_context.rs  file_trigger.rs  mod.rs  webhook_handler.rs
crates/boternity-observe/: Cargo.toml
crates/boternity-observe/src/: genai_attrs.rs  lib.rs  tracing_setup.rs
crates/boternity-types/: Cargo.toml
crates/boternity-types/src/: agent.rs  bot.rs  builder.rs  chat.rs  config.rs  error.rs  event.rs  identity.rs  lib.rs  llm.rs  memory.rs  message.rs  secret.rs  skill.rs  soul.rs  storage.rs  workflow.rs
migrations/: 20260210_001_initial.sql  20260211_002_chat_and_memory.sql  20260212_003_phase3_storage.sql  20260214_004_skill_audit.sql  20260215_005_builder_persistence.sql  20260216_006_workflow_messages.sql
wit/: boternity-skill.wit
(+224 files in other folders)
