[workspace]
resolver = "3"
members = [
    "crates/boternity-types",
    "crates/boternity-core",
    "crates/boternity-infra",
    "crates/boternity-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# HTTP framework
axum = { version = "0.8", features = ["macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Async SQL toolkit (SQLite)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# CLI interaction
dialoguer = { version = "0.11", features = ["password"] }
indicatif = "0.17"
comfy-table = "7"
console = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Unique identifiers (UUID v7 time-sortable)
uuid = { version = "1.20", features = ["v7", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP middleware
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# OS keychain integration
keyring = { version = "3.6", features = ["apple-native", "sync-secret-service", "crypto-rust"] }

# Cryptography (RustCrypto ecosystem)
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"

# Platform directories
dirs = "6"

# Error handling
thiserror = "1"
anyhow = "1"

# Workspace crates
boternity-types = { path = "crates/boternity-types" }
boternity-core = { path = "crates/boternity-core" }
boternity-infra = { path = "crates/boternity-infra" }
boternity-api = { path = "crates/boternity-api" }
