[package]
name = "boternity-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI and REST API application layer for Boternity"

[dependencies]
boternity-types = { workspace = true }
boternity-core = { workspace = true }
boternity-infra = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
