[package]
name = "boternity-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI and REST API application layer for Boternity"

[[bin]]
name = "bnity"
path = "src/main.rs"

[dependencies]
boternity-types = { workspace = true }
boternity-core = { workspace = true }
boternity-infra = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
comfy-table = { workspace = true }
console = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
termimad = { workspace = true }
syntect = { workspace = true }
rustyline-async = { workspace = true }
crossterm = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
secrecy = { workspace = true }
boternity-observe = { workspace = true }
tokio-stream = "0.1"
tokio-util = { workspace = true }
