[package]
name = "boternity-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Business logic and repository traits for Boternity"

[dependencies]
async-stream = { workspace = true }
boternity-types = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["time"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
