[package]
name = "boternity-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Business logic and repository traits for Boternity"

[dependencies]
async-stream = { workspace = true }
boternity-types = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["time", "rt", "macros"] }
tracing = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
petgraph = { workspace = true }
semver = { workspace = true }
serde_yaml_ng = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
