[package]
name = "boternity-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Infrastructure implementations (SQLite, keychain, filesystem) for Boternity"

[dependencies]
boternity-types = { workspace = true }
boternity-core = { workspace = true }
sqlx = { workspace = true }
keyring = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }

# LLM provider HTTP + streaming
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
secrecy = { workspace = true }
pin-project-lite = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
