[package]
name = "boternity-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Infrastructure implementations (SQLite, keychain, filesystem) for Boternity"

[dependencies]
boternity-types = { workspace = true }
boternity-core = { workspace = true }
sqlx = { workspace = true }
keyring = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }

# LLM provider HTTP + streaming
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
secrecy = { workspace = true }
pin-project-lite = { workspace = true }
base64 = { workspace = true }
async-openai = { workspace = true }

# Vector database + embeddings
lancedb = { workspace = true }
fastembed = { workspace = true }
text-splitter = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
toml = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
serde_yaml_ng = { workspace = true }
semver = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
