[package]
name = "boternity-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared domain types for Boternity"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
